# scool_lti

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  docker-compose.full.yml  docker-compose.yml  env-example.txt  gunicorn.conf.py  mkdocs.yml  mypy.ini  prek.toml  pyproject.toml  requirements-dev.txt  requirements.txt  run_checks.sh  scale_initdb-example.json  scale_initdb.py  zensical.toml
.github/: dependabot.yml
.github/workflows/: build-push-ghcr.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 1421571b75af_add_bin_data_table.py  1c1017d2682e_initial.py  9de6e354eda5_initial.py
docker/: dev.yml  prod.yml  sandbox.yml
docker/proxy/: Dockerfile  httpd.conf
docs/: index.md  requirements.txt
docs/lti/: canvas.md  canvas_install.md  canvas_module.md  general.md  index.md
docs/server/: index.md
proxy/: Dockerfile  httpd.conf
scale_api/: __init__.py  __main__.py  aio.py  app.py  auth.py  cas.py  db.py  events.py  keys.py  schemas.py  security.py  services.py  settings.py  tasks.py  templates.py  urls.py
scale_api/db/: __init__.py  core.py  errors.py  models.py  seed.py  store.py
scale_api/db/stores/: __init__.py  bindata.py  cache.py  message.py  scale.py  user.py
scale_api/lti/: __init__.py  messages.py  routes.py  services.py
scale_api/routes/: __init__.py  auth.py  core.py  files.py  firebase.py  lti.py  lti_v13.py  messages.py  platforms.py  users.py  well_known.py
scale_api/templates/: base.html  forgot_password.html  index.html  login.html  lti.html  lti_launch.html  lti_state_check.html  reset_password.html  scale_lms_auth.html
scale_api/templates/snippets/: nav.html
scool/: __init__.py  __main__.py  app.py  keys.py  middleware.py  schemas.py  security.py  server.py  services.py  settings.py  templates.py
scool/db/: __init__.py  core.py  models.py  seed.py  store.py
scool/routes/: __init__.py  auth.py  lti_v13.py  well_known.py
tests/: __init__.py  test_auth.py  test_cas.py  test_keys.py  test_schemas.py  test_services.py  test_settings.py
tests/certs/: local_ssl_cert.pem  local_ssl_key.pem
tests/data/lti/: canvas_resource_link.json
tests/http_requests/: scale_api.http
tests/lti/: __init__.py  test_messages.py
tests/routes/: test_messages.py  test_users.py
