[project]
name = "scool-lti"
version = "1.0.0"
description = "Student Centered Open Online Learning (SCOOL) LTI Integration"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "async-lru>=2.2.0",
    "asyncpg>=0.31.0",
    "bcrypt>=4.3.0,<5",
    "fastapi>=0.135.1",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "joserfc>=1.6.3",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "shortuuid>=1.0.13",
    "SQLAlchemy[asyncio]>=2.0.48",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
    "uvloop>=0.22.1; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "ruff>=0.15.5",
    "trustme>=1.2.1",
    "ty>=0.0.21",
    "types-passlib",
    "zensical>=0.0.26",
]

[tool.ruff]
target-version = "py314"
extend-exclude = [".*", "docs", "temp"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    "A",  # builtins
    "ARG",  # unused args
    "ASYNC",  # async
    "B",  # flake8-bugbear
    "C4",  # comprehensions
    "DTZ", # datetimez
    "E",  # pycodestyle (errors)
    "ERA",  # eradicate commented out code
    "F",  # Pyflakes
    "FAST",  # FastAPI
    "FURB",  # refurb
    "G",  # logging format
    "I",   # isort
    "ISC",  # implicit string concat
    "LOG",  # logging checks
    "N",  # pep8 naming
    "PERF",  # perflint
    "PIE",  # misc lints
    "PL",  # Pylint
    "PTH",  # pathlib
    "RET",  # returns
    "RSE",  # raises
    "RUF",  # ruff rules
    "S",  # flake8-bandit
    "SIM",  # simplify
    "T20",  # flake8-print
    "TC",  # type checking
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle (warnings)
]
ignore = [
    "ISC001",  # ruff format warning
    "TC002",
    "TC003",
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.field_validator"]
ignore-names = ["setUp", "tokenUrl"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ty.src]
exclude = ["alembic/", "tests/"]
