[project]
name = "scool-lti"
version = "1.0.0"
description = "Student Centered Open Online Learning (SCOOL) LTI Integration"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "async-lru>=2.3.0",
    "asyncpg>=0.31.0",
    "authstar>=1.2.1",
    "bcrypt>=4.3.0,<5",
    "fastapi>=0.139.2",
    "httptools>=0.8.0",
    "httpx>=0.28.1",
    "joserfc>=1.7.3",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "shortuuid>=1.0.13",
    "SQLAlchemy[asyncio]>=2.0.51",
    "starlette>=1.3.1",
    "uvicorn>=0.50.2",
    "uvloop>=0.22.1; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "prek>=0.4.9",
    "pytest>=9.1.1",
    "trustme>=1.2.1",
    "ty>=0.0.58",
    "zensical>=0.0.50",
]

[tool.ruff]
target-version = "py314"
extend-exclude = [".*", "docs", "temp"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    "A",  # builtins
    "ARG",  # unused args
    "ASYNC",  # async
    "B",  # flake8-bugbear
    "C4",  # comprehensions
    "DTZ", # datetimez
    "E",  # pycodestyle (errors)
    "ERA",  # eradicate commented out code
    "F",  # Pyflakes
    "FAST",  # FastAPI
    "FURB",  # refurb
    "G",  # logging format
    "I",   # isort
    "ISC",  # implicit string concat
    "LOG",  # logging checks
    "N",  # pep8 naming
    "PERF",  # perflint
    "PIE",  # misc lints
    "PL",  # Pylint
    "PT",  # pytest
    "PTH",  # pathlib
    "RET",  # returns
    "RSE",  # raises
    "RUF",  # ruff rules
    "S",  # flake8-bandit
    "SIM",  # simplify
    "T20",  # flake8-print
    "TC",  # type checking
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle (warnings)
]
ignore = [
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["setUp", "tokenUrl"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ty.src]
exclude = ["alembic/", "tests/"]
